# alicia-launcher-cli

./: CMakeLists.txt  README.md
include/liblauncher/util/: Util.hpp
resources/: settings.json
src/launcher/: Alicia.cpp  Alicia.hpp  launcher.rc  main.cpp
src/launcher-bridge/: launcher.rc  main.cpp
src/launcher/util/: Util.cpp  Util.hpp
src/liblauncher/util/: Util.cpp
